# Research-Tool

./: .env.example  .firebaserc  .gitignore  .kilocodemodes  AGENTS.md  AI_IMPLEMENTATION_COMPLETE.md  EPIC-3-QUICK-REFERENCE.md  README.md  index.html  opencode.json  package-lock.json  package.json  project  tailwind.config.mjs  test-ai.sh  test-graph-connection.cjs  test_output.txt  tsconfig.json  vite.config.ts  vitest.config.ts
.agent/workflows/: stitch.md
.coderrules/: 01_frontend_engineer.md  02_backend_engineer.md  03_ui_ux_designer.md  04_scaffolder.md  05_janitor.md  06_red_team.md  07_devops.md  Agents.md  Global.md
.opencode/tool/: vibe_tools.ts
_bmad-output/: automation-summary.md  review-report.md  session-completion-checklist.md  test-automation-status.md  test-execution-summary.md  test-templates.md  what-we-did-so-far.md
_bmad-output/excalidraw-diagrams/: diagram-20260101.excalidraw  validation-report-20260101.md  wireframe-all-screens.excalidraw  wireframe-dashboard.excalidraw  wireframe-editor.excalidraw  wireframe-graph.excalidraw
_bmad-output/implementation-artifacts/: 1-3-hierarchical-organization.md  1-4-markdown-editor-with-live-preview.md  1-5-CODE-REVIEW-REPORT.md  1-5-COMPLETION-SUMMARY.md  1-5-FIXES-APPLIED.md  1-5-FIXES-REQUIRED.md  1-5-REVIEW-SUMMARY.md  1-5-rapid-capture-modal-alt-space-IMPLEMENTATION-COMPLETE.md  1-5-rapid-capture-modal-alt-space-QUICK_REFERENCE.md  1-5-rapid-capture-modal-alt-space-file-list.txt  1-5-rapid-capture-modal-alt-space-implementation.md  1-5-rapid-capture-modal-alt-space.md  1-6-VERIFICATION-CHECKLIST.md  1-6-design-system-IMPLEMENTATION-SUMMARY.md  1-6-design-system-foundation-rational-grid-COMPLETE.md  1-6-design-system-foundation-rational-grid.md  1-7-accessibility-completion-summary.txt  1-7-accessibility-compliance-wcag-aaa-IMPLEMENTATION-COMPLETE.md  1-7-accessibility-compliance-wcag-aaa.md  1-8-aes-256-encryption-EXECUTION_SUMMARY.md  1-8-aes-256-encryption-FILE_SUMMARY.md  1-8-aes-256-encryption-QUICK_REFERENCE.md  1-8-aes-256-encryption-optional-IMPLEMENTATION.md  1-8-aes-256-encryption-optional.md  2-1-full-text-search-with-command-palette.md  3-2-CODE-REVIEW-REPORT.md  (+28 more)
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
dataconnect/: dataconnect.yaml
docs/: UI_DESIGN_PROMPT.md  accessibility.md  api-documentation.md  backend-architecture-update.md  design-system.md  development-guide.md  llm-selection-guide.md  notebooklm-features-integration.md  project-structure.md  technical-specifications.md
plans/: awesome-features-research.md  dashboard-remediation-plan.md  knowledge-base-project-plan.md  modular-plugin-architecture.md
project-structure/: README.md  dev-setup.sh  index.html  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  vite.config.ts
project-structure/src-tauri/: Cargo.toml  tauri.conf.json
project-structure/src-tauri/migrations/: 002_ai_features.sql  003_block_level_references.sql
project-structure/src-tauri/src/: main.rs  models.rs
project-structure/src-tauri/src/commands/: ai.rs  block.rs  folder.rs  link.rs  mod.rs  note.rs  search.rs  tag.rs
project-structure/src-tauri/src/services/: ai_service.rs  block_service.rs  folder_service.rs  link_parser.rs  link_service.rs  mod.rs  note_service.rs  search_service.rs  tag_service.rs
project-structure/src-tauri/tests/: block-service.test.ts
src/: index.css  main.tsx  mocks.ts  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0004_add_notes_metadata.sql  0005_add_encryption_fields.sql  0006_add_role_dashboard_layouts.sql  001_initial_schema.sql
src-tauri/src/: main.rs
src-tauri/src/commands/: ai.rs  cards.rs  dashboard_commands.rs  data.rs  data_settings.rs  encryption_commands.rs  encryption_settings.rs  graph_commands.rs  graph_commands_tests.rs  mod.rs  organization.rs  quick_commands.rs  related_notes.rs  search_commands.rs
src-tauri/src/services/: background.rs  backup_service.rs  cards.rs  db_service.rs  encrypted_note_service.rs  encryption_service.rs  export_service.rs  graph_analysis.rs  graph_service.rs  graph_service_tests.rs  import_service.rs  local_llm.rs  mod.rs  ollama.rs  organization_service.rs  passphrase_service.rs  role_service.rs  search_service.rs  search_service_tests.rs  server.rs  synthesis_service.rs
(+211 files in other folders)
