[package]
name = "knowledge-base-pro"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tauri = { version = "1.6.0", features = [] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "knowledge-base-pro"
path = "src/main.rs"
