[package]
name = "knowledge-base-pro"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tauri = { version = "1.6.0", features = ["dialog-message", "dialog-save", "fs-exists", "fs-create-dir", "fs-remove-dir", "fs-copy-file", "dialog-confirm", "dialog-open", "fs-rename-file", "fs-read-dir", "path-all", "fs-write-file", "fs-remove-file", "dialog-ask", "protocol-asset", "shell-open", "global-tray", "global-shortcut"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
walkdir = "2.4"
gray_matter = "0.2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
tempfile = "3.10"
futures-util = "0.3"

# AI / ML dependencies (Candle)
candle-core = { version = "0.3.3", features = ["wgpu"] } # wgpu for cross-platform GPU support
candle-nn = "0.3.3"
candle-transformers = "0.3.3"
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }
anyhow = "1.0"

[dev-dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }


[lib]
path = "src/lib.rs"

[[bin]]
name = "knowledge-base-pro"
path = "src/main.rs"
