[package]
name = "knowledge-base-pro-backend"
version = "2.0.0"
description = "Native core for KnowledgeBase Pro"
authors = ["KnowledgeBase Pro Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.6", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
anyhow = "1.0"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
tiktoken-rs = "0.5"
tokenizers = "0.13"
async-trait = "0.1"
dashmap = "5.5"
lru = "0.12"

[features]
custom-protocol = ["tauri/custom-protocol"]
